# ProjectMarch

./: .gitignore  .gitlab-ci.yml  Dockerfile  create_environments.sh  ros2_dependencies.repos  run.sh
ros1/src/: bussen.txt
ros1/src/control/march_acado_mpc/: CMakeLists.txt
ros1/src/control/march_acado_mpc/include/: joint_trajectory_mpc.hpp
ros1/src/control/march_joint_inertia_controller/: CMakeLists.txt
ros1/src/control/march_joint_inertia_controller/launch/: inertia_estimator_node.launch
ros1/src/data/march_realsense_reader/: package.xml
ros1/src/gaits/march_gait_files/: CMakeLists.txt  default.yaml
ros1/src/march_acado_mpc/: CMakeLists.txt  controller_plugins.xml  package.xml
ros1/src/march_acado_mpc/config/: model_predictive_controller.yaml
ros1/src/march_acado_mpc/include/march_acado_mpc/: model_predictive_controller.h  trajectory_mpc.h
ros1/src/march_acado_mpc/launch/: march_acado_mpc.launch
ros1/src/march_acado_mpc/src/: model_predictive_controller.cpp
ros1/src/march_description/: CMakeLists.txt
ros1/src/march_description/urdf/: march4_chain.xacro  test_joint_rotational.xacro
ros1/src/march_fake_sensor_data/: CMakeLists.txt
ros1/src/march_gait_files/: CMakeLists.txt
ros1/src/march_gait_files/motorcontroller-test/: default.yaml
ros1/src/march_gait_files/test_versions-vi/: default.yaml
ros1/src/march_gait_files/test_versions-vi/sit/: sit.gait
ros1/src/march_gazebo_plugins/: CMakeLists.txt
ros1/src/march_hardware/: CMakeLists.txt
ros1/src/march_hardware/config/: march_odrive.json  right_hip_fe.json  rotational_joint.json
ros1/src/march_hardware_builder/: CMakeLists.txt
ros1/src/march_hardware_builder/robots/: odrive_test_joint_linear.yaml  odrive_test_joint_rotational.yaml
ros1/src/march_hardware_interface/: CMakeLists.txt
ros1/src/march_hardware_interface/launch/: hardware.launch
ros1/src/march_hardware_interface/src/: march_hardware_interface.cpp  march_hardware_interface_node.cpp
ros1/src/march_imu_manager/: CMakeLists.txt
ros1/src/march_joint_inertia_controller/: CMakeLists.txt
ros1/src/march_launch/: package.xml
ros1/src/march_launch/launch/: march.launch  march_ros2_simulation.launch  march_simulation.launch  motorcontrollor_test.launch  upload_march_urdf.launch
ros1/src/march_motorcontroller_test/: CMakeLists.txt  package.xml  setup.py
ros1/src/march_motorcontroller_test/scripts/: generate_subgait  march_motorcontroller_test
ros1/src/march_motorcontroller_test/src/march_motorcontroller_test/: random_subgait_generator.py  subgait_generator.py
ros1/src/march_pdb_state_controller/: CMakeLists.txt
ros1/src/march_safety/: CMakeLists.txt
ros1/src/march_safety/src/: input_device_safety.cpp
ros1/src/march_shared_resources/: CMakeLists.txt
ros1/src/march_shared_resources/msg/: GainValues.msg  GainValuesList.msg  MotorControllerState.msg
ros1/src/march_shared_resources/srv/: GetGainValues2.srv  GetGainValues3.srv  GetParamBool.srv  GetParamInt.srv  RequestParamInt.srv  SetGainValues.srv  SetGainValuesList.srv  SetParamFloat.srv
ros1/src/march_simulation/launch/: march_world.launch
ros1/src/march_temperature_sensor_controller/: CMakeLists.txt
ros1/src/shared/march_description/: CMakeLists.txt
ros1/src/shared/march_shared_msgs/: CMakeLists.txt
ros1/src/simulation/march_gazebo_plugins/: CMakeLists.txt
ros2/src/data/march_pcl_conversion/: CMakeLists.txt  package.xml
ros2/src/data/march_pcl_conversion/include/march_pcl_conversion/: pcl_conversion_node.h
ros2/src/data/march_pcl_conversion/src/: pcl_conversion_node.cpp
ros2/src/gaits/march_gait_selection/: package.xml
ros2/src/gaits/march_test_joint_gait_generator/: package.xml  setup.cfg  setup.py
ros2/src/gaits/march_testjoint_gait_generator/: package.xml  setup.py
ros2/src/gaits/march_testjoint_gait_generator/march_testjoint_gait_generator/: testjoint_gait_generator.py
ros2/src/march_description/urdf/: march.gazebo  march4.xacro
ros2/src/march_example_node/: package.xml  setup.cfg  setup.py
ros2/src/march_example_node/launch/: march_example_node.launch.py
ros2/src/march_example_node/src/: march_example_node.py
ros2/src/march_gain_scheduling/: package.xml  setup.cfg  setup.py
ros2/src/march_gain_scheduling/config/: groundgait.yaml  sjaan_gait.yaml  test_joint_linear.yaml  test_joint_rotational.yaml
ros2/src/march_gain_scheduling/launch/: march_gain_scheduling.launch.py
ros2/src/march_gain_scheduling/march_gain_scheduling/: dynamic_pid_reconfigurer.py  gain_scheduling_node.py  interpolation_errors.py  one_step_linear_interpolation.py
ros2/src/march_gain_scheduling/test/: one_step_linear_interpolation_test.py
ros2/src/march_gait_selection/march_gait_selection/: gait_selection.py
ros2/src/march_launch/launch/: march_ros2_simulation.launch.py
ros2/src/march_rqt_input_device/march_rqt_input_device/: input_device_controller.py  input_device_view.py
ros2/src/march_shared_classes/: package.xml  setup.py
ros2/src/march_shared_msgs/: CMakeLists.txt
ros2/src/march_shared_msgs/srv/: GetGainValues.srv  GetGainValues2.srv  GetGainValues3.srv  GetGainValuesList.srv  GetParamFloat.srv  GetParamString.srv  GetParamStringList.srv  SetGainValuesList.srv
ros2/src/march_simulation/: package.xml  setup.py
ros2/src/march_simulation/config/effort_control/: march4.yaml  simple.yaml
ros2/src/march_simulation/config/position_control/: march4.yaml  test_joint_rotational.yaml
ros2/src/march_simulation/launch/: gazebo_launch.launch.py  march_world.launch.py
ros2/src/march_simulation/march_simulation/: spawn_obstacle.py
ros2/src/shared/march_description/: CMakeLists.txt
ros2/src/shared/march_shared_msgs/: CMakeLists.txt
ros2/src/simulation/march_simulation/: package.xml  setup.py
ros2/src/visualization/march_rqt_input_device/: setup.py
scripts/: .create_commands.sh  create_commands.sh  create_environments.sh  install_dependencies_ros1.sh  install_dependencies_ros2.sh  run.sh  setup.sh
src/march_description/urdf/: march4_chain.xacro
src/march_launch/launch/: march.launch
src/march_shared_classes/test/: gait_test.py
(+138 files in other folders)
