<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_gain_scheduling</name>
  <version>0.0.0</version>
  <description>A feature package that implements gain scheduling control.</description>
  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>march_shared_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
