<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>march_simulation</name>
    <version>0.0.0</version>
    <description>The simulation world in which the exoskeleton can be placed</description>
    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <exec_depend>controller_manager</exec_depend>

    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros2_control</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>

<!--    <exec_depend>march_fake_sensor_data</exec_depend>-->
<!--    <exec_depend>march_gazebo_plugins</exec_depend>-->
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>urdfdom_py</exec_depend>
    <exec_depend>xacro</exec_depend>
    <build_depend>xacro</build_depend>

    <exec_depend>march_description</exec_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>

</package>
