<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_testjoint_generator</name>
  <version>0.0.0</version>
  <description>Gait generator for the testjoint</description>
  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <exec_depend>march_shared_classes</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
